results/SVCOMP/4-shot/log-Array2-2024_03_18_05_07_41.txt
public class Array2 {

    //@ requires unknown >= 0;
    //@ ensures \result ==> (unknown > 0 ==> (\result == true && (\exists int[] arr; arr != null && arr.length == 1 && arr[0] == 1)) || (unknown <= 0 ==> (\result == true && (\exists int[] arr; arr != null && arr.length == 0)));
    //@ ensures !\result ==> (unknown > 0 ==> (\result == false && (\forall int[] arr; arr != null; arr.length != 1 || arr[0] != 1)) || (unknown <= 0 ==> (\result == false && (\forall int[] arr; arr != null; arr.length != 0));
    public static boolean func(int unknown) {
        int[] arr;
        if (unknown > 0)
            arr = new int[1];
        else
            arr = new int[0];

        if (unknown > 0)
            arr[0] = 1;

        if (unknown > 0)
            return arr.length == 1 && arr[0] == 1;
        else
            return arr.length == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/Array2.java:4: error: ')' expected
    //@ ensures \result ==> (unknown > 0 ==> (\result == true && (\exists int[] arr; arr != null && arr.length == 1 && arr[0] == 1)) || (unknown <= 0 ==> (\result == true && (\exists int[] arr; arr != null && arr.length == 0)));
                                                                                                                                                                                                                                   ^
/home/max/Documents/JMLGPT/tmp/Array2.java:5: error: ')' expected
    //@ ensures !\result ==> (unknown > 0 ==> (\result == false && (\forall int[] arr; arr != null; arr.length != 1 || arr[0] != 1)) || (unknown <= 0 ==> (\result == false && (\forall int[] arr; arr != null; arr.length != 0));
                                                                                                                                                                                                                                 ^
2 errors

